--- a/frontend/SpotifyCloneFrontend/src/app/components/login-component/login-component.html
+++ b/frontend/SpotifyCloneFrontend/src/app/components/login-component/login-component.html
@@ -66,7 +66,7 @@
                 </span>
                 <span *ngIf="loading" class="d-inline-flex align-items-center gap-2">
                   <span class="spinner-border spinner-border-sm" role="status"></span>
-                  Please wait...
+                  Verifikujem...
                 </span>
               </button>
 
