--- a/frontend/SpotifyCloneFrontend/src/app/components/register-component/register-component.html
+++ b/frontend/SpotifyCloneFrontend/src/app/components/register-component/register-component.html
@@ -9,8 +9,7 @@
                 <span class="dot"></span>
                 <span class="fw-bold">Spotify Clone</span>
               </div>
-              <h2 class="mt-3 mb-1 fw-bold">Registracija</h2>
-              <p class="text-secondary mb-0">Kreiraj nalog za pristup sistemu</p>
+              <h2 class="mt-3 mb-1 fw-bold">Registration</h2>
             </div>
 
             <div *ngIf="errorMessage" class="alert alert-danger">
@@ -30,7 +29,7 @@
                     type="text"
                     name="username"
                     [(ngModel)]="username"
-                    placeholder="npr. nikola123"
+                    placeholder="filip"
                     required
                   />
                 </div>
@@ -42,31 +41,31 @@
                     type="email"
                     name="email"
                     [(ngModel)]="email"
-                    placeholder="npr. nikola@mail.com"
+                    placeholder="filip@mail.com"
                     required
                   />
                 </div>
 
                 <div class="col-12 col-md-6">
-                  <label class="form-label">First Name</label>
+                  <label class="form-label">First name</label>
                   <input
                     class="form-control form-control-lg"
                     type="text"
                     name="firstName"
                     [(ngModel)]="firstName"
-                    placeholder="Nikola"
+                    placeholder="Filip"
                     required
                   />
                 </div>
 
                 <div class="col-12 col-md-6">
-                  <label class="form-label">Last Name</label>
+                  <label class="form-label">Last name</label>
                   <input
                     class="form-control form-control-lg"
                     type="text"
                     name="lastName"
                     [(ngModel)]="lastName"
-                    placeholder="Krstin"
+                    placeholder="Akin"
                     required
                   />
                 </div>
@@ -132,7 +131,7 @@
                 </div>
               </div>
 
-              <div class="text-center mt-3">
+              <div class="mt-4 text-center">
                 <a class="link-light text-decoration-none" routerLink="/login">
                   Već imaš nalog? <span class="text-success fw-semibold">Login</span>
                 </a>
@@ -140,8 +139,6 @@
             </form>
           </div>
         </div>
-
-        <div class="text-center mt-4 small text-secondary">© {{ year }} Spotify Clone</div>
       </div>
     </div>
   </div>
