--- a/frontend/SpotifyCloneFrontend/src/app/components/home-component/home-component.html
+++ b/frontend/SpotifyCloneFrontend/src/app/components/home-component/home-component.html
@@ -28,7 +28,7 @@
 
   <div class="container py-4">
     <!-- Search -->
-    <div class="card shadow-sm mb-4">
+    <!--<div class="card shadow-sm mb-4">
       <div class="card-body">
         <div class="row g-2 align-items-center">
           <div class="col-12 col-md-8">
@@ -65,7 +65,7 @@
           <span>Loading...</span>
         </div>
       </div>
-    </div>
+    </div>-->
 
     <!-- Artists -->
     <div class="row g-4">
